--- a/app/src/main/res/layout/frame_design_1.xml
+++ b/app/src/main/res/layout/frame_design_1.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/frame_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:text="@string/placeholder_name"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -47,7 +47,7 @@
                     android:id="@+id/frame_mobile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Mobile"
+                    android:text="@string/placeholder_mobile"
                     android:textColor="#E0E0E0"
                     android:textSize="13sp" />
 
@@ -55,7 +55,7 @@
                     android:id="@+id/frame_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Email"
+                    android:text="@string/placeholder_email"
                     android:textColor="#E0E0E0"
                     android:textSize="13sp" />
             </LinearLayout>
